--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header id="myHeader">
       <div class="logo">
-        <img src="/src/images/logo.svg" alt="logo" />
+        <img src="src/images/logo.svg" alt="logo" />
       </div>
       <nav id="myNav">
         <div class="dropdown" id="services">
@@ -365,11 +365,11 @@
           Follow Us:
           <div class="doubleFollow">
             <img
-              src="/src/images/followUsToEclipse.svg"
+              src="src/images/followUsToEclipse.svg"
               alt="follow us to ellipse"
             />
             <img
-              src="/src/images/followUsToFacebook.svg"
+              src="src/images/followUsToFacebook.svg"
               alt="follow us to facebook"
             />
           </div>
@@ -382,9 +382,9 @@
         </div>
         <div class="followBlock">
           <div class="tripleRating">
-            <img src="/src/images/homeAd.png" alt="good by home ad" />
-            <img src="/src/images/3smth.png" alt="3 mean good" />
-            <img src="/src/images/aRating.png" alt="a+ rating" />
+            <img src="src/images/homeAd.png" alt="good by home ad" />
+            <img src="src/images/3smth.png" alt="3 mean good" />
+            <img src="src/images/aRating.png" alt="a+ rating" />
           </div>
           Copyright © 2023 Kitchen Cabinet Guys - All Rights Reserved
         </div>
