--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <article class="service service--refacing">
             <div class="service__image">
               <img
-                src="src/images/cabinetRefacing.png"
+                src="src/images/cabinetRefacing.webp"
                 alt="cabinet Refacing"
               />
             </div>
@@ -161,7 +161,7 @@
           <article class="service service--replacement">
             <div class="service__image">
               <img
-                src="src/images/CabinetDoorReplacement.png"
+                src="src/images/CabinetDoorReplacement.webp"
                 alt="cabinet door replacement"
               />
             </div>
@@ -187,7 +187,7 @@
           <article class="service service--repair">
             <div class="service__image">
               <img
-                src="src/images/CabinetDoorReplacement.png"
+                src="src/images/doorRepair.webp"
                 alt="Thermofoil Cabinet Door Repair"
               />
             </div>
@@ -212,7 +212,6 @@
           </article>
         </div>
       </section>
-
       <section class="gallery">
         <div class="gallery__header">
           <h2 class="gallery__header-title">Gallery</h2>
@@ -227,30 +226,26 @@
             </div>
           </div>
         </div>
-    
+
         <div class="glide">
           <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
               <li class="glide__slide">
-                <div class="gallery__slide">
-                  <img src="src/images/slide1_1.png" alt="slide1_image1" />
-                  <img src="src/images/slide1_2.png" alt="slide1_image2" />
-                </div>
+                <img src="src/images/slide1_1.webp" alt="slide1_image1" />
+                <img src="src/images/slide1_2.webp" alt="slide1_image2" />
               </li>
               <li class="glide__slide">
-                <div class="gallery__slide">
-                  <img src="src/images/slide2_1.png" alt="slide2_image1" />
-                  <img src="src/images/slide2_2.png" alt="slide2_image2" />
-                </div>
+                <img src="src/images/slide2_1.webp" alt="slide2_image1" />
+                <img src="src/images/slide2_2.webp" alt="slide2_image2" />
               </li>
             </ul>
           </div>
           <div class="glide__arrows" data-glide-el="controls">
             <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-              Prev
+              <
             </button>
             <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-              Next
+              >
             </button>
           </div>
         </div>
@@ -264,7 +259,7 @@
           </div>
         </div>
         <div class="testimonials__comments">
-          <div class="testimonial">
+          <div class="testimonial__comments-comment">
             <div class="testimonial__stars">
               <img src="src/images/stars.svg" alt="all stars" />
             </div>
@@ -276,7 +271,7 @@
             </div>
             <div class="testimonial__author">Christopher Torre</div>
           </div>
-          <div class="testimonial">
+          <div class="testimonial__comments-comment">
             <div class="testimonial__stars">
               <img src="src/images/stars.svg" alt="all stars" />
             </div>
@@ -288,7 +283,7 @@
             </div>
             <div class="testimonial__author">Michael Jason</div>
           </div>
-          <div class="testimonial">
+          <div class="testimonial__comments-comment">
             <div class="testimonial__stars">
               <img src="src/images/stars.svg" alt="all stars" />
             </div>
@@ -301,65 +296,61 @@
             <div class="testimonial__author">Christopher Torre</div>
           </div>
         </div>
-        <div class="testimonial-form">
-          <div class="testimonial-form__wrapper">
-            <div class="testimonial-form__image">
-              <img
-                src="src/images/kitchenInputForm.png"
-                alt="Take the First Step Towards Your Kitchen Makeover"
-              />
-            </div>
-            <form class="testimonial-form__form">
-              <h2 class="testimonial-form__title">
-                Take the First Step Towards Your Kitchen Makeover
-              </h2>
-              <div class="testimonial-form__text">
-                Ready to transform your kitchen? Contact us today to get started
-                with your free estimate!
-              </div>
-              <div class="testimonial-form__inputs">
-                <div class="testimonial-form__names">
-                  <input
-                    type="text"
-                    name="firstName"
-                    placeholder="First Name"
-                  />
-                  <input type="text" name="lastName" placeholder="Last Name" />
-                </div>
-                <div class="testimonial-form__contact">
-                  <input type="email" name="email" placeholder="Email" />
-                  <input type="phone" name="phone" placeholder="Phone" />
-                </div>
-                <div class="testimonial-form__details">
-                  <input type="text" name="adress" placeholder="Address" />
-                  <div class="dropdown testimonial-form__dropdown">
-                    <select name="services" id="services-select">
-                      <option value="">Services</option>
-                      <option value="CabinetRefacing">Cabinet Refacing</option>
-                      <option value="CabinetDoorsReplacement">
-                        Cabinet Doors Replacement
-                      </option>
-                      <option value="ThermofoilCabinetDoorRepair">
-                        Thermofoil Cabinet Door Repair
-                      </option>
-                      <option value="DecorativeWallPanels">
-                        Decorative Wall Panels
-                      </option>
-                    </select>
-                  </div>
-                  <input
-                    type="text"
-                    name="message"
-                    placeholder="Message"
-                    id="message"
-                  />
-                </div>
-              </div>
-              <button type="submit" class="testimonial-form__button">
-                Get A Free Estimate
-              </button>
-            </form>
+      </section>
+      <section class="testimonial-form">
+        <div class="testimonial-form__wrapper">
+          <div class="testimonial-form__image">
+            <img
+              src="src/images/kitchenInputForm.webp"
+              alt="Take the First Step Towards Your Kitchen Makeover"
+            />
           </div>
+          <form class="testimonial-form__form">
+            <h2 class="testimonial-form__title">
+              Take the First Step Towards Your Kitchen Makeover
+            </h2>
+            <div class="testimonial-form__text">
+              Ready to transform your kitchen? Contact us today to get started
+              with your free estimate!
+            </div>
+            <div class="testimonial-form__inputs">
+              <div class="testimonial-form__names">
+                <input type="text" name="firstName" placeholder="First Name" />
+                <input type="text" name="lastName" placeholder="Last Name" />
+              </div>
+              <div class="testimonial-form__contact">
+                <input type="email" name="email" placeholder="Email" />
+                <input type="phone" name="phone" placeholder="Phone" />
+              </div>
+              <div class="testimonial-form__details">
+                <input type="text" name="adress" placeholder="Address" />
+                <div class="dropdown testimonial-form__dropdown">
+                  <select name="services" id="services-select">
+                    <option value="">Services</option>
+                    <option value="CabinetRefacing">Cabinet Refacing</option>
+                    <option value="CabinetDoorsReplacement">
+                      Cabinet Doors Replacement
+                    </option>
+                    <option value="ThermofoilCabinetDoorRepair">
+                      Thermofoil Cabinet Door Repair
+                    </option>
+                    <option value="DecorativeWallPanels">
+                      Decorative Wall Panels
+                    </option>
+                  </select>
+                </div>
+                <input
+                  type="text"
+                  name="message"
+                  placeholder="Message"
+                  id="message"
+                />
+              </div>
+            </div>
+            <button type="submit" class="testimonial-form__button">
+              Get A Free Estimate
+            </button>
+          </form>
         </div>
       </section>
     </main>
@@ -405,14 +396,14 @@
         <div class="footer__follow-block">
           Brought to you by
           <div class="footer__sponsor">
-            <img src="src/images/Thermoflip Logo.png" alt="Thermoflip Logo" />
+            <img src="src/images/Thermoflip Logo.webp" alt="Thermoflip Logo" />
           </div>
         </div>
         <div class="footer__follow-block">
           <div class="footer__ratings">
-            <img src="src/images/homeAd.png" alt="good by home ad" />
-            <img src="src/images/3smth.png" alt="3 mean good" />
-            <img src="src/images/aRating.png" alt="a+ rating" />
+            <img src="src/images/homeAd.webp" alt="good by home ad" />
+            <img src="src/images/3smth.webp" alt="3 mean good" />
+            <img src="src/images/aRating.webp" alt="a+ rating" />
           </div>
           Copyright © 2023 Kitchen Cabinet Guys - All Rights Reserved
         </div>
