--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Project</title>
-    <link rel="stylesheet" href="dist/css/main.min.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css"
     />
+    <link rel="stylesheet" href="dist/css/main.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/glide.min.js"></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="myHeader">
       <div class="header__logo">
         <img src="src/images/logo.svg" alt="logo" />
       </div>
-      <nav class="header__nav">
+      <nav class="header__nav" id="myNav">
         <div class="dropdown header__dropdown">
           <button
             aria-haspopup="true"
@@ -231,12 +232,28 @@
           <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
               <li class="glide__slide">
-                <img src="src/images/slide1_1.webp" alt="slide1_image1" />
-                <img src="src/images/slide1_2.webp" alt="slide1_image2" />
+                <img
+                  src="src/images/slide1_1.webp"
+                  alt="slide1_image1"
+                  id="slide1_pic1"
+                />
+                <img
+                  src="src/images/slide1_2.webp"
+                  alt="slide1_image2"
+                  id="slide1_pic2"
+                />
               </li>
               <li class="glide__slide">
-                <img src="src/images/slide2_1.webp" alt="slide2_image1" />
-                <img src="src/images/slide2_2.webp" alt="slide2_image2" />
+                <img
+                  src="src/images/slide2_1.webp"
+                  alt="slide2_image1"
+                  id="slide2_pic1"
+                />
+                <img
+                  src="src/images/slide2_2.webp"
+                  alt="slide2_image2"
+                  id="slide2_pic2"
+                />
               </li>
             </ul>
           </div>
@@ -420,10 +437,94 @@
         </div>
       </div>
     </footer>
-
+    <div class="glide2">
+      <div class="glide__track" data-glide-el="track">
+        <ul class="glide__slides">
+          <li class="glide__slide">
+            <div class="testimonial__comments-comment">
+              <div class="testimonial__stars">
+                <img src="src/images/stars.svg" alt="all stars" />
+              </div>
+              <div class="testimonial__text">
+                THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
+                them on the Web (Google Search) and filled out a "Contact" form
+                on a Sat. I couldn't believe that Andrei called me on Sunday
+                morn. - I told my wife "I already like these guys!".
+              </div>
+              <div class="testimonial__author">Christopher Torre</div>
+            </div>
+          </li>
+          <li class="glide__slide">
+            <div class="testimonial__comments-comment">
+              <div class="testimonial__stars">
+                <img src="src/images/stars.svg" alt="all stars" />
+              </div>
+              <div class="testimonial__text">
+                Andre and the team @ Kitchen Cabinet Guys LLC did a stunning
+                transformation of my family’s kitchen. Our realtor said we
+                easily increased the value of our home by $30k for less than a
+                third of the cost. If anyone is considering a new kitchen,
+              </div>
+              <div class="testimonial__author">Michael Jason</div>
+            </div>
+          </li>
+          <li class="glide__slide">
+            <div class="testimonial__comments-comment">
+              <div class="testimonial__stars">
+                <img src="src/images/stars.svg" alt="all stars" />
+              </div>
+              <div class="testimonial__text">
+                THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
+                them on the Web (Google Search) and filled out a "Contact" form
+                on a Sat. I couldn't believe that Andrei called me on Sunday
+                morn. - I told my wife "I already like these guys!".
+              </div>
+              <div class="testimonial__author">Christopher Torre</div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="glide__arrows" data-glide-el="controls">
+        <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+          <
+        </button>
+        <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+          >
+        </button>
+      </div>
+    </div>
     <script src="dist/js/main.js"></script>
     <script>
-      new Glide(".glide").mount();
+      const glide = new Glide(".glide").mount();
+      /*const glide2 = new Glide(".glide2", {
+        type: "slider",
+        startAt: 0,
+        perView: 3,
+        breakpoints: {
+          745: {
+            perView: 1,
+          },
+        },
+      }).mount();
+      glide2.destroy();*/ 
+      const glide2 = new Glide(".glide2", {
+        type: "carousel",
+        startAt: 0,
+        perView: 3,
+        breakpoints: {
+          745: {
+            perView: 1,
+          },
+        },
+      }).mount();
+      glide2.disable();
+      function initSlider() {
+        if (window.innerWidth < 745) {
+          console.log(">745");
+          glide2.enable()
+        } 
+      }
+      initSlider();
     </script>
   </body>
 </html>
