--- a/index.html
+++ b/index.html
@@ -275,42 +275,60 @@
             Kitchen Cabinet Guys and the quality of our work.
           </div>
         </div>
-        <div class="testimonials__comments">
-          <div class="testimonial__comments-comment">
-            <div class="testimonial__stars">
-              <img src="src/images/stars.svg" alt="all stars" />
-            </div>
-            <div class="testimonial__text">
-              THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
-              them on the Web (Google Search) and filled out a "Contact" form on
-              a Sat. I couldn't believe that Andrei called me on Sunday morn. -
-              I told my wife "I already like these guys!".
-            </div>
-            <div class="testimonial__author">Christopher Torre</div>
+        <div class="glide2">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide">
+                <div class="testimonial__comments-comment">
+                  <div class="testimonial__stars">
+                    <img src="src/images/stars.svg" alt="all stars" />
+                  </div>
+                  <div class="testimonial__text">
+                    THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
+                    them on the Web (Google Search) and filled out a "Contact" form
+                    on a Sat. I couldn't believe that Andrei called me on Sunday
+                    morn. - I told my wife "I already like these guys!".
+                  </div>
+                  <div class="testimonial__author">Christopher Torre</div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="testimonial__comments-comment">
+                  <div class="testimonial__stars">
+                    <img src="src/images/stars.svg" alt="all stars" />
+                  </div>
+                  <div class="testimonial__text">
+                    Andre and the team @ Kitchen Cabinet Guys LLC did a stunning
+                    transformation of my family’s kitchen. Our realtor said we
+                    easily increased the value of our home by $30k for less than a
+                    third of the cost. If anyone is considering a new kitchen,
+                  </div>
+                  <div class="testimonial__author">Michael Jason</div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="testimonial__comments-comment">
+                  <div class="testimonial__stars">
+                    <img src="src/images/stars.svg" alt="all stars" />
+                  </div>
+                  <div class="testimonial__text">
+                    THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
+                    them on the Web (Google Search) and filled out a "Contact" form
+                    on a Sat. I couldn't believe that Andrei called me on Sunday
+                    morn. - I told my wife "I already like these guys!".
+                  </div>
+                  <div class="testimonial__author">Christopher Torre</div>
+                </div>
+              </li>
+            </ul>
           </div>
-          <div class="testimonial__comments-comment">
-            <div class="testimonial__stars">
-              <img src="src/images/stars.svg" alt="all stars" />
-            </div>
-            <div class="testimonial__text">
-              Andre and the team @ Kitchen Cabinet Guys LLC did a stunning
-              transformation of my family’s kitchen. Our realtor said we easily
-              increased the value of our home by $30k for less than a third of
-              the cost. If anyone is considering a new kitchen,
-            </div>
-            <div class="testimonial__author">Michael Jason</div>
-          </div>
-          <div class="testimonial__comments-comment">
-            <div class="testimonial__stars">
-              <img src="src/images/stars.svg" alt="all stars" />
-            </div>
-            <div class="testimonial__text">
-              THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
-              them on the Web (Google Search) and filled out a "Contact" form on
-              a Sat. I couldn't believe that Andrei called me on Sunday morn. -
-              I told my wife "I already like these guys!".
-            </div>
-            <div class="testimonial__author">Christopher Torre</div>
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+              <
+            </button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+              >
+            </button>
           </div>
         </div>
       </section>
@@ -370,6 +388,7 @@
           </form>
         </div>
       </section>
+      
     </main>
     <footer class="footer">
       <div class="footer__info">
@@ -422,7 +441,10 @@
             <img src="src/images/3smth.webp" alt="3 mean good" />
             <img src="src/images/aRating.webp" alt="a+ rating" />
           </div>
-          Copyright © 2023 Kitchen Cabinet Guys - All Rights Reserved
+          <div class="footer__follow-block-copyright">
+            Copyright © 2023 Kitchen Cabinet Guys - All Rights Reserved
+          </div>
+         
         </div>
       </div>
       <div class="footer__links">
@@ -437,62 +459,7 @@
         </div>
       </div>
     </footer>
-    <div class="glide2">
-      <div class="glide__track" data-glide-el="track">
-        <ul class="glide__slides">
-          <li class="glide__slide">
-            <div class="testimonial__comments-comment">
-              <div class="testimonial__stars">
-                <img src="src/images/stars.svg" alt="all stars" />
-              </div>
-              <div class="testimonial__text">
-                THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
-                them on the Web (Google Search) and filled out a "Contact" form
-                on a Sat. I couldn't believe that Andrei called me on Sunday
-                morn. - I told my wife "I already like these guys!".
-              </div>
-              <div class="testimonial__author">Christopher Torre</div>
-            </div>
-          </li>
-          <li class="glide__slide">
-            <div class="testimonial__comments-comment">
-              <div class="testimonial__stars">
-                <img src="src/images/stars.svg" alt="all stars" />
-              </div>
-              <div class="testimonial__text">
-                Andre and the team @ Kitchen Cabinet Guys LLC did a stunning
-                transformation of my family’s kitchen. Our realtor said we
-                easily increased the value of our home by $30k for less than a
-                third of the cost. If anyone is considering a new kitchen,
-              </div>
-              <div class="testimonial__author">Michael Jason</div>
-            </div>
-          </li>
-          <li class="glide__slide">
-            <div class="testimonial__comments-comment">
-              <div class="testimonial__stars">
-                <img src="src/images/stars.svg" alt="all stars" />
-              </div>
-              <div class="testimonial__text">
-                THE Kitchen Cabinet Guys ARE GREAT! HIGHLY RECOMMENDED! I found
-                them on the Web (Google Search) and filled out a "Contact" form
-                on a Sat. I couldn't believe that Andrei called me on Sunday
-                morn. - I told my wife "I already like these guys!".
-              </div>
-              <div class="testimonial__author">Christopher Torre</div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="glide__arrows" data-glide-el="controls">
-        <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-          <
-        </button>
-        <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-          >
-        </button>
-      </div>
-    </div>
+ 
     <script src="dist/js/main.js"></script>
     <script>
       const glide = new Glide(".glide").mount();
@@ -508,7 +475,7 @@
       }).mount();
       glide2.destroy();*/ 
       const glide2 = new Glide(".glide2", {
-        type: "carousel",
+        type: "slider",
         startAt: 0,
         perView: 3,
         breakpoints: {
@@ -520,7 +487,7 @@
       glide2.disable();
       function initSlider() {
         if (window.innerWidth < 745) {
-          console.log(">745");
+          console.log("<745");
           glide2.enable()
         } 
       }
